# AtlasWM

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
atlaswm/: __init__.py  data.py  designs.py  encoder.py  kernels.py  model.py  predictor.py  regularizer.py  targets.py  train.py
atlaswm/planning/: __init__.py  cem.py
configs/: default.yaml  hz_4d.yaml  pusht.yaml
docs/: quickstart.md  theory.md
examples/: quickstart.py
scripts/: bench.py  train.py
tests/: conftest.py  test_designs.py  test_model.py  test_regularizer.py  test_targets.py
